<resources>
    <string name="app_name">EasyLaundryCustomer</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="done">DONE</string>
    <string name="proseslaundry">PROSES LAUNDRY CEPAT</string>
    <string name="biayaterjangkau">BIAYA TERJANGKAU</string>
    <string name="tidakribet">TIDAK RIBET</string>
    <string name="antarsampai">ANTAR SAMPAI TUJUAN</string>
    <string name="ketpager1">Kamu bisa mengunakan waktumu lebih produktif lagi</string>
    <string name="ketpager2">Jauh lebih cepat dibanding dengan mencuci sendiri</string>
    <string name="ketpager3">Laundry cepat, murah, dan bergaransi ya dimana lagi selain di Easy Laundry</string>
    <string name="ketpager4">Malas keluar rumah ambil laundry? Tenang, kami akan antar ke tempatmu</string>
    <string name="namapelanggan">+ Nama Pelanggan</string>
    <string name="namaoutlet">+ Nama Outlet</string>
    <string name="berat">+ Berat (kg)</string>
    <string name="jenislayanan">+ Jenis Layanan</string>
    <string name="jumlahpieces">+ Jumlah Pieces</string>
    <string name="kalkulasikan">Kalkulasikan</string>
    <string name="totaltagihan">Total Tagihan</string>
    <string name="pembayaran">Pembayaran</string>
    <string name="kembalian">Kembalian</string>
    <string name="tglselesai">Tgl. Selesai</string>
    <string name="cetaknota">Cetak Nota</string>
    <string name="rp">+ Rp.</string>
    <string name="ceknota">Cek Nota Berhasil</string>
    <string name="orderberhasil">Order berhasil diterima. Silahkan tunggu sesuai dengan estimasi tanggal selesai.</string>
    <string name="terimakasih">Terima Kasih</string>
    <string name="kembali">Kembali</string>
    <string name="nomornota">No. Nota</string>
    <string name="namapelanggannota">Nama Pelanggan</string>
    <string name="tglmasuknota">Tanggal Masuk</string>
    <string name="mark">:</string>
    <string name="tglselesainota">Tanggal Selesai</string>
    <string name="status">Status</string>
    <string name="statuspengerjaan">Status Pengerjaan</string>
    <string name="cuciantahap">Status Cucian</string>
    <string name="fill_data">Isi semua data diatas tombol kalkulasikan</string>
    <string name="searchhint">Cari nomor nota</string>
    <string name="raporharian">Rapor Harian</string>
    <string name="raporbulanan">Rapor Bulanan</string>
    <string name="logOut">Log Out</string>
    <string name="atau">ATAU</string>
    <string name="masukanemail">+ masukan email</string>
    <string name="masukanpassword">+ masukan password</string>
    <string name="konfirmasipassword">+ konfirmasi password</string>
    <string name="buatakun">BUAT AKUN</string>
    <string name="lihatdaftarakun">LIHAT DAFTAR AKUN</string>
    <string name="password_mismatch">Password tidak sama</string>
    <string name="masukannama">+ masukan nama</string>
    <string name="masukankota">+ masukan kota</string>
    <string name="pilihposisi">+ pilih posisi</string>
    <string name="kode">kode</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="masuk">MASUK</string>
    <string name="daftarbaru">DAFTAR BARU</string>
    <string name="nomorhp">Nomor HP</string>
    <string name="kiloan">Kiloan (Kg)</string>
    <string name="jenislayanan2">Jenis Layanan</string>
    <string name="berat2">Berat (kg)</string>
    <string name="jumlahpcs">Jumlah Pcs</string>
    <string name="ketbiayadantanggal">Biaya dan Tanggal Selesai Layanan</string>
    <string name="biaya">Biaya</string>
    <string name="meteran">Meteran (M2)</string>
    <string name="tglselesai2">Tanggal Selesai</string>
    <string name="satuan">Satuan (Pcs)</string>
    <string name="no1">1</string>
    <string name="no2">2</string>
    <string name="no3">3</string>
    <string name="no4">4</string>
    <string name="no5">5</string>
    <string name="no6">6</string>
    <string name="no7">7</string>
    <string name="no8">8</string>
    <string name="no9">9</string>
    <string name="no10">10</string>
    <string name="p">P</string>
    <string name="l">L</string>
    <string name="totalbiaya">Total Biaya</string>
    <string name="fill_data_login">Isi semua data diatas</string>
    <string name="aktifkankamera">aktifkan kamera</string>
    <string name="manual">manual</string>
    <string name="dialog_title">Masukkan id nota</string>
    <string name="namapic">Nama</string>
    <string name="kodepegawaipic">Kode pegawai</string>
    <string name="namaoutletpic">Nama outlet</string>
    <string name="kodeoutletpic">Kode outlet</string>
    <string name="print">Print Nota</string>
    <string name="terima">Terima</string>
    <string name="pelunasan">Pelunasan</string>
    <string name="cek_rak">Cek rak</string>
</resources>
