<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ProgressBar
        android:visibility="invisible"
        android:id="@+id/loading_circle_bar_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:translationZ="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <ImageView
        android:id="@+id/imageViewIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="8dp"
        android:src="@drawable/ic_easy_laundry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:fontFamily="@font/lato_medium"
        android:textSize="16sp"
        android:id="@+id/editTextEmail"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/ic_email"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorBlueLogin"
        android:textColorHint="@color/colorBlueLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewIcon" />

    <EditText
        android:fontFamily="@font/lato_medium"
        android:textSize="16sp"
        android:id="@+id/editTextPassword"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/custom_edit_text"
        android:drawableStart="@drawable/ic_password"
        android:drawableLeft="@drawable/ic_password"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColor="@color/colorBlueLogin"
        android:textColorHint="@color/colorBlueLogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <Button
        android:id="@+id/buttonMasuk"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/custom_button_login"
        android:fontFamily="@font/lato_bold"
        android:text="@string/masuk"
        android:textColor="@color/colorPureWhite"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <Button
        android:id="@+id/buttonDaftarBaru"
        android:layout_width="310dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/custom_button_login"
        android:fontFamily="@font/lato_bold"
        android:text="@string/daftarbaru"
        android:textColor="@color/colorPureWhite"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAtau" />

    <TextView
        android:id="@+id/textViewAtau"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="180dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="181dp"
        android:fontFamily="@font/lato_bold"
        android:text="@string/atau"
        android:textColor="@color/colorBlueLogin"
        android:textSize="19sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMasuk" />

    <TableRow
        android:background="@color/colorBlueLogin"
        android:orientation="horizontal"
        android:id="@+id/linear1"
        android:layout_width="120dp"
        android:layout_height="2dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/textViewAtau"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonMasuk">
    </TableRow>

    <TableRow
        android:background="@color/colorBlueLogin"
        android:id="@+id/linear2"
        android:layout_width="120dp"
        android:layout_height="2dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="15dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textViewAtau"
        app:layout_constraintTop_toBottomOf="@+id/buttonMasuk">
    </TableRow>
</android.support.constraint.ConstraintLayout>